--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 	</head>
 	<body>
+		<script src='/javascripts/jquery.min.js'></script>
 		{{{body}}}
 	</body>
 </html>
