--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,13 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Hello, {{name}}!</h1>
+
+<p>What do you want to do?</p>
+<p>
+<a href="/bank/">Online Banking</a>
+</p>
+<p>
+	Other:
+	<ul>
+		<li><a href="#">this</a></li>
+		<li><a href="#">that</a></li>
+	</ul>
+</p>
