--- a/views/bank/login.hbs
+++ b/views/bank/login.hbs
@@ -2,11 +2,11 @@
 	<div>
 		<label for="username">Username</label>
 		<br />
-		<input id="username" type="text" value="admin" />
+		<input id="username" name="username" type="text" value="admin" />
 		<br />
 		<label for="password">Password</label>
 		<br />
-		<input id="password" type="password" value="admin" />
+		<input id="password" name="password" type="password" value="admin" />
 		<input type="checkbox" class="show-password" />
 		<label for="show-password">Show</label>
 		<br />
