--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
 		<div>
 			<small>
 				<a href="/">Home</a>
-				<a href="logout">Logout</a>
+				<a href="/bank/logout">Logout</a>
 			</small>
 		</div>
 		{{/if}}
