show password on demand

--- a/views/bank/login.hbs
+++ b/views/bank/login.hbs
@@ -6,8 +6,9 @@
 		<br />
 		<label for="password">Password</label>
 		<br />
-		<input id="password" name="password" type="password" value="admin" />
-		<input type="checkbox" class="show-password" />
+		<input id="password" name="password" type="password" value="admin"
+		       class="password" />
+		<input type="checkbox" id="show-password" value="on" />
 		<label for="show-password">Show</label>
 		<br />
 		<input type="submit" />
