--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,5 +20,6 @@
 		{{/if}}
 		<script src='/javascripts/jquery.min.js'></script>
 		{{{body}}}
+		<script src='/javascripts/scripts.js'></script>
 	</body>
 </html>
