--- a/views/bank/index.hbs
+++ b/views/bank/index.hbs
@@ -31,9 +31,9 @@
 	<tbody>
 		{{#each transactions}}
 		<tr>
-			<td>{{this.date}}</td>
-			<td>{{this.recipient}}</td>
-			<td class="amount">{{this.amount}} EUR</td>
+			<td>{{date}}</td>
+			<td>{{recipient}}</td>
+			<td class="amount">{{amount}} EUR</td>
 		</tr>
 		{{/each}}
 	</tbody>
